Feb XX, 2024: version 3.1.0

    * major update to build system

Jul 26, 2023: version 3.0.0

    * major change to the API: new SPEX_factorization and SPEX_symbolic_analysis
        objects.  Uniform analyze/factorize/solve functions for all kinds of 
        factorizations.
    * thread-safe: SPEX 2.0 was not thread-safe if the user application called 
        it in parallel; v3.0 is now thread-safe with SPEX_thread_initialize
        and SPEX_thread_finalize.
    * SPEX_Cholesky: robust implementation of sparse REF Cholesky.
    * SPEX_Backslash: automatically determines (between SPEX LU and SPEX
        Cholesky) the best exact algorithm to use when solving a SLE.
    * python interface: SPEX can now be used to solve SLEs in python with only
        one line. There are separate functions for SPEX LU, SPEX Cholesky and 
        SPEX Backslash.
    * MATLAB interface: SPEX can now be used to solve SLEs in MATLAB with only
        one line. There are separate functions for SPEX LU, SPEX Cholesky and 
        SPEX Backslash.

Dec 9, 2022: version 2.0.2

    * minor change to build system

Nov 12, 2022: version 2.0.0

    * using CMake build system
    * SuiteSparse_long: replaced with int64_t
    * SPEX.h: single include file
    * SPEX_VERSION: single set of version and date macros

July 7, 2022: version 1.1.5

    * version published in ACM TOMS
