@@ -1,6 +1,6 @@
-# SPEX, Copyright (c) 2019-2023, Chris Lourenco (US Naval Academy), Jinhao
-# Chen, Erick Moreno-Centeno, Timothy A. Davis, Texas A&M.  All Rights
-# Reserved.
+# SPEX, Copyright (c) 2019-2024, Chris Lourenco (US Naval Academy), Jinhao
+# Chen, Erick Moreno-Centeno, Lorena Mejia Domenzain, Timothy A. Davis, Texas
+# A&M.  All Rights Reserved.
 # SPDX-License-Identifier: GPL-2.0-or-later or LGPL-3.0-or-later
 
 prefix=@prefix@
